# flask-native-stubs

./: .gitignore  CHANGELOG.zh.md  README.md  README.zh.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: the-non-intrusive-design.zh.mo  way-to-exit-after-sending-response.zh.mo
examples/: _dry_run_template.py  readme.md
examples/_template/: server.py
examples/eg01/: client.py  server.py
examples/eg_01/client/: main.py
examples/eg_01/client/server_stubs/: main.py
examples/eg_01/server/: main.py  temp_stubgen.py
examples/eg_02/: client.py  server.py
examples/elegant_exit/: client.py  dry_run.py  server.py
examples/elegant_exit/stubs/: server.py
examples/simple_01/: client.py  dry_run.py  server.py
examples/simple_01/stubs/: server.py
examples/simple_02/: dry_run.py
examples/simple_02/client/: main.py
examples/simulate_client/: both_server_and_client.py  by_environment.py  in_script.py
flask_native_call/: __init__.py  client_side.py  delegates.py  intermediate.py  server_side.py
flask_native_call/stubgen/: __init__.py
flask_native_stubs/: __init__.py  _safe_exit.py  app.py  client_side.py  config.py  delegates.py  delegator.py  general.py  global_controls.py  protocol.py  request.py  requests.py  response.py  safe_exit.py  server_side.py
flask_native_stubs/api/: __init__.py  client_side.py  daemon_side.py  server_side.py
flask_native_stubs/stubgen/: __init__.py  add_route.py  func_parser.py  general.py  route.py  runtime_collector.py  runtime_stubgen.py  stubgen.py
