[tool.poetry]
name = "flask-native-stubs"
version = "0.3.1"
description = "Call flask decorated functions like native ones."
homepage = "https://github.com/likianta/flask-native-stubs"
readme = "README.md"
authors = ["Likianta <likianta@foxmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
flask = ""
requests = ""
urllib3 = ""

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
