[tool.poetry]
name = "flask-native-stubs"
version = "0.5.0a1"
description = "Call flask decorated functions like native ones."
homepage = "https://github.com/likianta/flask-native-stubs"
readme = "README.md"
authors = ["Likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
requests = "*"
urllib3 = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
