[tool.poetry]
name = "flask-native-stubs"
version = "0.5.0a4"
description = "Call flask decorated functions like native ones."
homepage = "https://github.com/likianta/flask-native-stubs"
readme = "README.md"
authors = ["Likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
# pysignal = { url = "http://likianta.pro:2006/pysignal/pysignal-0.1.2a0-py3-none-any.whl" }
requests = "*"
urllib3 = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
